Switch to bootstrap supported dark mode

--- a/app/src/main/resources/static/css/dark-mode.css
+++ b/app/src/main/resources/static/css/dark-mode.css
@@ -1,117 +1,4 @@
-[data-theme="dark"] {
-  background-color: #222 !important;
-  color: #eee;
-}
-
-[data-theme="dark"] .text-primary {
-  color: rgba(55, 90, 127, 1) !important;
-}
-
-[data-theme="dark"] .bg-light {
-  background-color: #333;
-}
-
-[data-theme="dark"] .bg-white {
-  background-color: #000;
-}
-
-[data-theme="dark"] .bg-black {
-  background-color: #eee;
-}
-
-[data-theme="dark"] .list-group-item {
-  color: #eee;
-  background-color: #333;
-  border-bottom: 1px solid #555;
-}
-
-[data-theme="dark"] .list-group-item.active {
-  color: #eee;
-  background-color: #444;
-  border-color: #333;
-}
-
-[data-theme="dark"] .list-group-item-action:hover, .list-group-item-action:focus {
-  color: #ccc;
-  background-color: #444;
-}
-
-[data-theme="dark"] .list-group-item-action:active {
-  color: #eee;
-  background-color: #333;
-}
-
-[data-theme="dark"] .card {
-  background-color: #333;
-  border: 1px solid #555;
-}
-
-[data-theme="dark"] .card-header {
-  color: #eee;
-  background-color: #444;
-  border-bottom: 1px solid #555;
-}
-
-[data-theme="dark"] .form-control::file-selector-button {
-  color: #eee;
-  background-color: #444;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
-[data-theme="dark"] .form-control:hover:not(:disabled):not([readonly])::file-selector-button {
-  background-color: #333;
-}
-
-[data-theme="dark"] .btn-primary {
-  color: #fff;
-  background-color: #375a7f;
-  border-color: #375a7f;
-}
-
-[data-theme="dark"] .btn-primary:hover {
-  color: #fff;
-  background-color: #2f4d6c;
-  border-color: #2c4866;
-}
-
-[data-theme="dark"] .btn-info {
-  color: #fff;
-  background-color: #3498db;
-  border-color: #3498db;
-}
-
-[data-theme="dark"] .btn-info:hover {
-  color: #fff;
-  background-color: #2c81ba;
-  border-color: #2a7aaf;
-}
-
-[data-theme="dark"] .btn-danger {
-  color: #fff;
-  background-color: #e74c3c;
-  border-color: #e74c3c;
-}
-
-[data-theme="dark"] .btn-danger:hover {
-  color: #fff;
-  background-color: #c44133;
-  border-color: #b93d30;
-}
-
-[data-theme="dark"] .form-check-input {
-  background-color: #375a7f;
-  border-color: #375a7f;
-}
-
-[data-theme="dark"] .table {
-  --bs-table-striped-color: #eee;
-  --bs-table-active-color: #eee;
-  --bs-table-hover-color: #eee;
-  color: #eee;
-  border-color: #555;
-}
-
-[data-theme="dark"] .table-danger {
+[data-bs-theme="dark"] .table-danger {
   --bs-table-bg: #4f4f4f;
   --bs-table-striped-bg: #5f5f5f;
   --bs-table-striped-color: #fff;
@@ -119,39 +6,10 @@
   border-color: #4f4f4f;
 }
 
-[data-theme="dark"] .table-success {
+[data-bs-theme="dark"] .table-success {
   --bs-table-bg: #28a745;
   --bs-table-striped-bg: #5cb85c;
   --bs-table-striped-color: #fff;
   color: #fff;
   border-color: #28a745;
-}
-
-[data-theme="dark"] .page-link {
-  color: #375a7f;
-  background-color: #333;
-  border: 1px solid #555;
-}
-
-[data-theme="dark"] .page-link:hover {
-  color: #375a7f;
-  background-color: #444;
-}
-
-[data-theme="dark"] .page-link:focus {
-  color: #375a7f;
-  background-color: #444;
-}
-
-[data-theme="dark"] .form-label {
-  color: #eee;
-}
-
-[data-theme="dark"] .form-text {
-  color: #888;
-}
-
-[data-theme="dark"] .text-muted {
-  --bs-text-opacity: 1;
-  color: #888 !important;
 }
