--- a/app/src/main/resources/templates/save-book.html
+++ b/app/src/main/resources/templates/save-book.html
@@ -23,15 +23,21 @@
                             <input id="bookName" class="form-control" type="text" placeholder="Book name"
                                    aria-label="Book name" aria-describedby="bookNameHelp" th:field="*{name}"
                                    th:classappend="${#fields.hasErrors('name')}? 'is-invalid'">
-                            <div id="bookNameHelp" class="form-text text-muted">Book name can't be empty, or longer than 15
-                                signs.
+                            <div>
+                                <small id="bookNameHelp" class="form-text text-muted">
+                                    Book name can't be empty, or longer than 15 signs.
+                                </small>
                             </div>
                         </div>
                         <div class="col-12">
                             <input id="bookAuthor" class="form-control" type="text" placeholder="Book author"
                                    aria-label="Book author" aria-describedby="bookAuthorHelp" th:field="*{author}"
                                    th:classappend="${#fields.hasErrors('author')}? 'is-invalid'">
-                            <div id="bookAuthorHelp" class="form-text text-muted">Book author can't be empty.</div>
+                            <div>
+                                <small id="bookAuthorHelp" class="form-text text-muted">
+                                    Book author can't be empty.
+                                </small>
+                            </div>
                         </div>
                         <div class="col-12">
                             <button type="submit" class="btn btn-primary">Submit</button>
