--- a/app/src/main/resources/templates/login.html
+++ b/app/src/main/resources/templates/login.html
@@ -40,8 +40,8 @@
                                    placeholder="Password" aria-label="Password" aria-describedby="password"
                                    th:field="*{password}" required>
                             <div class="input-group-append">
-                                <button class="btn btn-light" id="password-btn" type="button"
-                                        onclick="password_show_hide();">
+                                <button class="btn btn-light password-btn" type="button"
+                                        onclick="login_show_hide();">
                                     <i class="fa fa-eye-slash" id="password-icon"></i>
                                 </button>
                             </div>
