--- a/app/src/main/resources/static/css/basic.css
+++ b/app/src/main/resources/static/css/basic.css
@@ -5,7 +5,7 @@
   height: 100%
 }
 
-#password-btn {
+.password-btn {
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
   border: 1px solid #ced4da;
