--- a/app/src/main/resources/templates/change-password.html
+++ b/app/src/main/resources/templates/change-password.html
@@ -20,45 +20,32 @@
                          role="alert">
                     </div>
                     <form class="row g-2" th:action="@{/change-password}" th:object="${changePassword}" th:method="post">
+                        <input type="hidden" th:field="*{userName}"/>
                         <div class="input-group mb-2">
                             <div class="input-group-prepend">
-                                <span class="input-group-text" id="previousPassword"><i class="fa fa-lock"></i></span>
+                                <span class="input-group-text" id="password"><i class="fa fa-lock"></i></span>
                             </div>
-                            <input name="previousPassword" type="password" class="form-control" id="previous-password-input"
-                                   placeholder="Previous Password" aria-label="previousPassword" aria-describedby="previousPassword"
-                                   th:field="*{previousPassword}" required>
+                            <input name="password" type="password" class="form-control" id="password-input"
+                                   placeholder="New Password" aria-label="Password" aria-describedby="password"
+                                   th:field="*{password}" required>
                             <div class="input-group-append">
                                 <button class="btn btn-light password-btn" type="button"
-                                        onclick="previous_show_hide();">
-                                    <i class="fa fa-eye-slash" id="previous-password-icon"></i>
+                                        onclick="login_show_hide();">
+                                    <i class="fa fa-eye-slash" id="password-icon"></i>
                                 </button>
                             </div>
                         </div>
                         <div class="input-group mb-2">
                             <div class="input-group-prepend">
-                                <span class="input-group-text" id="proposedPassword1"><i class="fa fa-lock"></i></span>
+                                <span class="input-group-text" id="repeatPassword"><i class="fa fa-lock"></i></span>
                             </div>
-                            <input name="proposedPassword1" type="password" class="form-control" id="proposed-password-1-input"
-                                   placeholder="Proposed Password" aria-label="proposedPassword1" aria-describedby="proposedPassword1"
-                                   th:field="*{proposedPassword1}" required>
+                            <input name="repeatPassword" type="password" class="form-control" id="repeat-password-input"
+                                   placeholder="Repeat New Password" aria-label="Password" aria-describedby="password"
+                                   th:field="*{repeatPassword}" required>
                             <div class="input-group-append">
                                 <button class="btn btn-light password-btn" type="button"
-                                        onclick="proposed1_show_hide();">
-                                    <i class="fa fa-eye-slash" id="proposed-password-1-icon"></i>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="input-group mb-2">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="proposedPassword2"><i class="fa fa-lock"></i></span>
-                            </div>
-                            <input name="proposedPassword2" type="password" class="form-control" id="proposed-password-2-input"
-                                   placeholder="Repeat Proposed Password" aria-label="proposedPassword2" aria-describedby="proposedPassword2"
-                                   th:field="*{proposedPassword2}" required>
-                            <div class="input-group-append">
-                                <button class="btn btn-light password-btn" type="button"
-                                        onclick="proposed2_show_hide();">
-                                    <i class="fa fa-eye-slash" id="proposed-password-2-icon"></i>
+                                        onclick="repeat_password_show_hide();">
+                                    <i class="fa fa-eye-slash" id="repeat-password-icon"></i>
                                 </button>
                             </div>
                         </div>
