Improve password validation

--- a/app/src/main/resources/templates/change-password.html
+++ b/app/src/main/resources/templates/change-password.html
@@ -27,12 +27,17 @@
                             </div>
                             <input name="password" type="password" class="form-control" id="password-input"
                                    placeholder="New Password" aria-label="Password" aria-describedby="password"
-                                   th:field="*{password}" required>
+                                   th:field="*{password}"
+                                   th:classappend="${#fields.hasErrors('password')}? 'is-invalid'"
+                                   required autofocus>
                             <div class="input-group-append">
                                 <button class="btn btn-light password-btn" type="button"
                                         onclick="login_show_hide();">
                                     <i class="fa fa-eye-slash" id="password-icon"></i>
                                 </button>
+                            </div>
+                            <div class="invalid-feedback" th:if="${#fields.hasErrors('password')}"
+                                 th:text="${#strings.listJoin(#fields.errors('password'), ', ')}">
                             </div>
                         </div>
                         <div class="input-group mb-2">
@@ -41,12 +46,17 @@
                             </div>
                             <input name="repeatPassword" type="password" class="form-control" id="repeat-password-input"
                                    placeholder="Repeat New Password" aria-label="Password" aria-describedby="password"
-                                   th:field="*{repeatPassword}" required>
+                                   th:field="*{repeatPassword}"
+                                   th:classappend="${#fields.hasErrors('repeatPassword')}? 'is-invalid'"
+                                   required>
                             <div class="input-group-append">
                                 <button class="btn btn-light password-btn" type="button"
                                         onclick="repeat_password_show_hide();">
                                     <i class="fa fa-eye-slash" id="repeat-password-icon"></i>
                                 </button>
+                            </div>
+                            <div class="invalid-feedback" th:if="${#fields.hasErrors('repeatPassword')}"
+                                 th:text="${#strings.listJoin(#fields.errors('repeatPassword'), ', ')}">
                             </div>
                         </div>
                         <div class="form-outline">
