Add header link for cognito sign in

--- a/app/src/main/resources/templates/layouts/basic-layout.html
+++ b/app/src/main/resources/templates/layouts/basic-layout.html
@@ -31,7 +31,7 @@
         </div>
         <div class="col-md-5" sec:authorize="isAuthenticated()">
             <div class="d-flex flex-row">
-                <div class="me-2" sec:authentication="name"></div>
+                <div class="me-2">[[${username}]]</div>
                 <form name="logoutForm" th:hidden="true" th:method="POST" th:action="@{/logout}">
                     <input type="submit" value="Logout"/>
                 </form>
@@ -39,7 +39,8 @@
             </div>
         </div>
         <div class="col-sm-5" sec:authorize="isAnonymous()">
-            <a th:href="@{/register}">Sign up</a>
+            <a class="me-2" th:href="@{/register}">Sign up</a>
+            <a th:href="@{/oauth2/authorization/cognito}">Sign in</a>
             <p class="display-5 text-end"></p>
         </div>
         <div class="col-sm-5">
