feat: Add User Registration and Login with Cognito (#52)
* Add CognitoApp

* Improve CognitoStack

* Extend ServiceApp

* Tidy up the code

* Add OAuth2 dependency

* Define CognitoIdentityProvider

* Introduce RegistrationController

* Move CognitoStack to dedicated package

* Add RegistrationService implementation

* Replace com.amazonaws:aws-java-sdk-cognitoidp with software.amazon.awssdk:cognitoidentityprovider

* Use bom for aws dependencies

* Get rid of aws sdk bom

* Introduce dev profile

* Add sign up link

* Improve register page

* Fix register page

* Add registration codes

* Fix redirection

* Switch to UserService

* Use ktfmt instead of klint for Kotlin formatting

* Use CognitoIdentityProviderClient#adminInitiateAuth

* Add UserService#changePassword

* Use AdminSetUserPasswordRequest

* Improve password validation

* Add UserService#refreshToken

* Add header link for cognito sign in

* Simplify username showing

* Allow stickySessionsEnabled setting

* Rework logout

* Add docker compose with Keycloak

* Rewrite CognitoUserService#changePassword

* Add user pool groups

* Revert CognitoUserService#changePassword changes

* Fix controller tests

* Use sec:authentication

* Use latest keycloak

* Merge stable into feature branch

* Unify controller tests

* Tidy up code

* Change token

* Fix controller tests

* Use generic tokens

* Add CognitoUserServiceTest

* Add Testcontainers badge

* Update Keycloak configuration

* Bump keycloak to version 22.0.0

* Implement OAuth2UserService

* Bump keycloak test-container to version 22.0.0

* Allow security for both aws and dev profiles

* Remove user pool groups creation

---------

Co-authored-by: Branislav Beno <brano.beno@gmail.com>
Co-authored-by: Branislav Beno <branislav.beno@siemens.com>

--- a/app/src/main/resources/templates/change-password.html
+++ b/app/src/main/resources/templates/change-password.html
@@ -13,36 +13,23 @@
         <div class="col-sm-4">
             <div class="card">
                 <div class="card-header">
-                    <h5>Sign In</h5>
+                    <h5>Change password</h5>
                 </div>
                 <div class="card-body">
-                    <div th:if="${param.error}">
-                        <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
+                    <div th:if="${message}" th:text="${message}" th:class="${'alert alert-' + messageType}"
+                         role="alert">
                     </div>
-                    <div th:if="${param.logout}">
-                        <p class="text-warning">You have been signed out.</p>
-                    </div>
-                    <div th:if="${message}" th:text="${message}" th:class="${'alert alert-' + messageType}" role="alert"></div>
-                    <form class="row g-2" th:action="@{/login}" th:object="${user}" th:method="post">
-                        <div class="input-group mb-2">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="username"><i class="fa fa-user"></i></span>
-                            </div>
-                            <input name="username" type="text" class="form-control" id="username-input"
-                                   placeholder="Username" aria-label="Username" aria-describedby="username"
-                                   th:field="*{username}"
-                                   th:classappend="${#fields.hasErrors('username')}? 'is-invalid'"
-                                   required autofocus>
-                        </div>
+                    <form class="row g-2" th:action="@{/change-password}" th:object="${changePassword}" th:method="post">
+                        <input type="hidden" th:field="*{userName}"/>
                         <div class="input-group mb-2">
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="password"><i class="fa fa-lock"></i></span>
                             </div>
                             <input name="password" type="password" class="form-control" id="password-input"
-                                   placeholder="Password" aria-label="Password" aria-describedby="password"
+                                   placeholder="New Password" aria-label="Password" aria-describedby="password"
                                    th:field="*{password}"
                                    th:classappend="${#fields.hasErrors('password')}? 'is-invalid'"
-                                   required>
+                                   required autofocus>
                             <div class="input-group-append">
                                 <button class="btn btn-light password-btn" type="button"
                                         onclick="login_show_hide();">
@@ -51,6 +38,25 @@
                             </div>
                             <div class="invalid-feedback" th:if="${#fields.hasErrors('password')}"
                                  th:text="${#strings.listJoin(#fields.errors('password'), ', ')}">
+                            </div>
+                        </div>
+                        <div class="input-group mb-2">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="repeatPassword"><i class="fa fa-lock"></i></span>
+                            </div>
+                            <input name="repeatPassword" type="password" class="form-control" id="repeat-password-input"
+                                   placeholder="Repeat New Password" aria-label="Password" aria-describedby="password"
+                                   th:field="*{repeatPassword}"
+                                   th:classappend="${#fields.hasErrors('repeatPassword')}? 'is-invalid'"
+                                   required>
+                            <div class="input-group-append">
+                                <button class="btn btn-light password-btn" type="button"
+                                        onclick="repeat_password_show_hide();">
+                                    <i class="fa fa-eye-slash" id="repeat-password-icon"></i>
+                                </button>
+                            </div>
+                            <div class="invalid-feedback" th:if="${#fields.hasErrors('repeatPassword')}"
+                                 th:text="${#strings.listJoin(#fields.errors('repeatPassword'), ', ')}">
                             </div>
                         </div>
                         <div class="form-outline">
