--- a/app/src/main/resources/static/css/basic.css
+++ b/app/src/main/resources/static/css/basic.css
@@ -5,13 +5,13 @@
   height: 100%
 }
 
-#password-btn {
+.password-btn {
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
   border: 1px solid #ced4da;
 }
 
-#username-input:focus, #password-input:focus {
+#username-input:focus, #email-input:focus, #invitation-code-input:focus, #password-input:focus {
   border-color: #86b7fe;
   outline: 0;
   box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.25);
