--- a/app/src/main/resources/templates/borrowed-books.html
+++ b/app/src/main/resources/templates/borrowed-books.html
@@ -20,7 +20,7 @@
                 <div class="card-body">
                     <div class="alert alert-warning" role="alert" th:if="${!found}">
                         <strong>Warning:</strong>
-                        <span>No available books have been found.</span>
+                        <span>No borrowed books have been found.</span>
                     </div>
                     <div th:if="${found}">
                         <table aria-label="Borrowed books" class="table table-striped">
