--- a/app/src/main/resources/templates/login.html
+++ b/app/src/main/resources/templates/login.html
@@ -2,6 +2,7 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorate="~{layouts/basic-layout}"
       xmlns="http://www.w3.org/1999/html">
 <head>
@@ -12,9 +13,6 @@
     <div class="row d-flex justify-content-center">
         <div class="col-sm-4">
             <div class="card">
-                <div class="card-header">
-                    <h5>Sign In</h5>
-                </div>
                 <div class="card-body">
                     <div th:if="${param.error}">
                         <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
@@ -22,41 +20,11 @@
                     <div th:if="${param.logout}">
                         <p class="text-warning">You have been signed out.</p>
                     </div>
-                    <div th:if="${message}" th:text="${message}" th:class="${'alert alert-' + messageType}" role="alert"></div>
-                    <form class="row g-2" th:action="@{/login}" th:object="${user}" th:method="post">
-                        <div class="input-group mb-2">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="username"><i class="fa fa-user"></i></span>
-                            </div>
-                            <input name="username" type="text" class="form-control" id="username-input"
-                                   placeholder="Username" aria-label="Username" aria-describedby="username"
-                                   th:field="*{username}"
-                                   th:classappend="${#fields.hasErrors('username')}? 'is-invalid'"
-                                   required autofocus>
-                        </div>
-                        <div class="input-group mb-2">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="password"><i class="fa fa-lock"></i></span>
-                            </div>
-                            <input name="password" type="password" class="form-control" id="password-input"
-                                   placeholder="Password" aria-label="Password" aria-describedby="password"
-                                   th:field="*{password}"
-                                   th:classappend="${#fields.hasErrors('password')}? 'is-invalid'"
-                                   required>
-                            <div class="input-group-append">
-                                <button class="btn btn-light password-btn" type="button"
-                                        onclick="login_show_hide();">
-                                    <i class="fa fa-eye-slash" id="password-icon"></i>
-                                </button>
-                            </div>
-                            <div class="invalid-feedback" th:if="${#fields.hasErrors('password')}"
-                                 th:text="${#strings.listJoin(#fields.errors('password'), ', ')}">
-                            </div>
-                        </div>
-                        <div class="form-outline">
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                        </div>
-                    </form>
+                    <div th:if="${message}" th:text="${message}" th:class="${'alert alert-' + messageType}"
+                         role="alert"></div>
+                    <div class="alert alert-info" role="alert" sec:authorize="isAnonymous()">
+                        <span>Seems like you are not signed-in yet. Please sign in or sign up first to see list of books.</span>
+                    </div>
                 </div>
             </div>
         </div>
