Initialize database on application's start up

--- a/app/src/main/resources/templates/all-books.html
+++ b/app/src/main/resources/templates/all-books.html
@@ -62,7 +62,7 @@
                             </tr>
                             </tbody>
                         </table>
-                        <div th:replace="~{fragments/navigation :: pagination-nav(pageLink='/')}"></div>
+                        <div th:replace="~{fragments/navigation :: pagination-nav(pageLink='/books')}"></div>
                     </div>
                 </div>
             </div>
