--- a/app/src/main/resources/templates/fragments/navigation.html
+++ b/app/src/main/resources/templates/fragments/navigation.html
@@ -12,7 +12,7 @@
 <div th:fragment="toggle-pane" class="col-md-2">
     <div class="card">
         <div class="list-group list-group-flush">
-            <a id="allBooksButton" class="list-group-item list-group-item-action" th:href="@{/}">Show all
+            <a id="allBooksButton" class="list-group-item list-group-item-action" th:href="@{/books}">Show all
                 books</a>
             <a id="availableBooksButton" class="list-group-item list-group-item-action"
                th:href="@{/available}">Show available books</a>
